# proof-engine-code

./: .coverage  .dmypy.json  .gitignore  BRANCH_PROTECTION_SETUP.md  CHANGELOG.md  FINAL_SETUP_GUIDE.md  GROVE_DEMO_SETUP.md  PRIVATE_REPO_PROTECTION.md  PUBLIC_REPO_SETUP.md  README.md  README_VERIFY.md  REPOSITORY_SETUP_COMPLETE.md  TROUBLESHOOTING_STATUS_CHECKS.md  WORKFLOW_TROUBLESHOOTING.md  action.yml  coverage.xml  pyproject.toml  setup_local_protection.py  setup_public_repo.py
.github/workflows/: proof-ci.yml  proof-delta.yml
.pec/: ambition.json  ambition.schema.json  proof_delta.md
.proof/: coverage.xml  merkle.json  ruff.json  sast.json  test-report.xml
examples/pilot-python/: pyproject.toml
pec_cli/: __main__.py  ambition.py
scripts/: pack_evidence.py
scripts/hooks/: pre-commit-code.ps1  pre-commit-code.sh  pre-push-code.ps1  pre-push-code.sh
spec_pack/: requirements.lock.txt  requirements.txt  retro_rules.yaml
spec_pack.code/: README_CODE.md  invariants_code.yaml  obligations_code.yaml
spec_pack.code/ambition/: ambition.code.json
spec_pack.code/app/: verifiers.yaml
spec_pack.code/schemas/: evidence.dev.schema.json
spec_pack.code/tools/: a2c_code.py  check_semver.py
spec_pack/compiled/: a2h_proof.json
spec_pack/samples/: incidents.ndjson  journal.ndjson
spec_pack/tools/: a2h_compile.py  a2h_semantics.py  build_pinning.py  check_api_diff.py  fca_nextclosure.py  gen_metrics.py  merkle_hasher.py  proof_delta.py  robust_api_diff.py  run_s1.py  s2_check.py  (+3 more)
src/: test_change.py
tests/: test_ambition_cli.py  test_ambition_rules.py
(+2 files in other folders)
