[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pec-cli"
version = "0.1.0"
description = "Proof Engine Companion CLI (Ambition Intake v0)"
authors = [{ name = "Proof Engine Team" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "jsonschema>=4.20,<5",
  "pyyaml>=6.0.1",
]

[project.scripts]
pec = "pec_cli.__main__:app"

[tool.setuptools]
packages = ["pec_cli"]
include-package-data = true

